# vidit

./: .gitattributes  .gitignore  .jscpd.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  requirements-docs.txt
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  railway.json  vulture_whitelist.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_rename_analysis_to_proof.py  a3c5e7g9i1k3_state_validated_to_human.py  b2c4d6e8f0a2_proof_images_table.py  b4d6f8h0j2l4_geoloc_state_human_to_submitted.py  c3d5e7f9a1b3_auth_tokens_and_email_verified.py  c5e7g9i1k3m5_geoloc_rename_state_to_status.py  d4e6f8a0b2c4_admin_role_and_invite_quotas.py  d6f8h0j2l4n6_merge_bounties_into_geolocation_events.py  de48d2633d35_initial.py  df0d3ce16843_allow_null_created_by_on_invite_codes.py  e7f9a1b3c5d7_geolocation_soft_delete.py  e7g9i1k3m5o7_rename_geolocations_to_events.py  f1a3b5c7d9e0_user_soft_delete.py  f8h0j2l4n6p8_add_events_status_value_check.py  faac60e89c44_add_missing_indexes.py  g3b5d7e9f1a3_demo_flags.py  g9i1k3m5o7q9_rename_proof_images_geolocation_id.py  h0j2l4n6p8r0_event_model_refactor.py  h4c6e8f0a2b4_pending_registrations.py  i1k3m5o7q9s1_source_contract_nullable.py  i5d7f9a1b3c5_auth_events.py  j2l4n6p8r0t2_conflicts_referential.py  j6e8f0a2b4c6_user_profile_columns.py  k3m5o7q9s1u3_bot_mentions_ledger.py  k7f9a1b3c5d7_bounties.py  l4n6p8r0t2v4_archive_import_jobs.py  l8g0b2c4d6e8_bounty_claims.py  m5o7q9s1u3w5_invite_code_x_handle.py  m9h1c3d5e7f9_bounty_is_demo.py  n0i2d4e6f8a0_bounty_unique_fulfillment.py  n6p8r0t2v4x6_bot_webhook_events.py  o1j3k5l7m9n1_search_fts_indexes.py  o7q9s1u3w5y7_bot_mention_liked_at.py  p2k4l6m8n0o2_add_follows_table.py  q3l5m7n9o1p3_add_sha256_to_media_and_proof_images.py  r4m6n8o0p2q4_add_provenance_to_media_and_proof_images.py  s5n7p9r1t3v5_seed_capture_source_taxonomy.py  t6o8q0s2u4w6_user_token_version.py  u7p9r1t3v5x7_author_user_split.py  v8q0s2u4w6y8_geolocation_state_machine.py  (+4 more)
backend/app/: cache.py  config.py  database.py  dependencies.py  main.py  ratelimit.py
backend/app/middleware/: csrf.py
backend/app/models/: __init__.py  admin_event.py  archive_import_job.py  auth_event.py  auth_token.py  bot_mention.py  bot_webhook_event.py  bounty.py  conflict.py  event.py  follow.py  geolocation.py  invite_code.py  media.py  pending_registration.py  proof_image.py  tag.py  user.py
backend/app/routers/: _errors.py  _event_query.py  _forms.py  admin.py  auth.py  auth_x.py  bounties.py  conflicts.py  geolocations.py  search.py  social.py  tags.py  users.py  webhooks.py
backend/app/routers/events/: __init__.py  _common.py  duplicates.py  import_archive.py  import_tweet.py  item.py  read.py  write.py
backend/app/routers/geolocations/: __init__.py  _common.py  duplicates.py  import_archive.py  import_tweet.py  item.py  read.py  write.py
backend/app/schemas/: __init__.py  admin.py  auth.py  auth_x.py  bounty.py  conflict.py  event.py  geolocation.py  media.py  recovery.py  search.py  tag.py  tweet_import.py  user.py
backend/app/services/: admin.py  archive_jobs.py  audit.py  auth.py  auth_cookies.py  auth_tokens.py  bot.py  bounties.py  conflict_sync.py  detection.py  email.py  event_filters.py  events.py  evidence_intake.py  evidence_processing.py  geolocations.py  handles.py  maintenance.py  permissions.py  registration.py  sanitize.py  search.py  seed.py  social.py  storage.py  thumbnails.py  tweet_parsing.py  user_stats.py  x_api.py  x_oauth.py  x_oauth_binding.py
backend/app/services/tweet_ingest/: __init__.py  acquire.py  archive.py  archive_zip.py  detect.py  errors.py  extract.py  parse.py  records.py  resolve.py  stitch.py  syndication.py  telegram.py
backend/scripts/: dump_openapi.py  manage_x_webhook.py  mock_admin.py  mock_demo_user.py  run_bot.py  run_import_worker.py  seed_conflicts.py  seed_demo.py  seed_detections.py  seed_tags.py  seed_timeline.py  sync_conflicts.py
backend/tests/: _fixtures.py  conftest.py  test_acquire_resolution.py  test_admin.py  test_archive.py  test_archive_zip.py  test_auth.py  test_auth_change_password.py  test_auth_cookies.py  test_auth_events.py  test_auth_recovery.py  test_bot.py  test_bounties.py  test_config.py  test_conflict_sync.py  test_conflicts.py  test_detect.py  test_detection.py  test_evidence_processing.py  test_forms.py  test_geolocations.py  test_handles.py  test_health.py  test_maintenance.py  test_rate_limits.py  test_registration_pending.py  test_resolve.py  test_sanitize.py  test_search.py  test_seed.py  test_session_invalidation.py  test_social.py  test_stitch.py  test_storage_local.py  test_storage_s3.py  test_tags.py  test_telegram_embed.py  test_tweet_parsing.py  test_users.py  test_users_stats.py  (+3 more)
backend/tests/data/synthetic_archive/: tweets.js
backend/tests/events/: _helpers.py  conftest.py  test_bounties.py  test_constraints.py  test_create.py  test_detections.py  test_duplicates.py  test_geolocate_race.py  test_gold_path.py  test_import.py  test_import_archive.py  test_media_edit.py  test_owner_flow.py  test_read.py  test_requests.py  test_wiring.py
backend/tests/geolocations/: _helpers.py  conftest.py  test_create.py  test_detections.py  test_duplicates.py  test_import.py  test_import_archive.py  test_media_edit.py  test_owner_flow.py  test_read.py  test_review.py  test_review_queue.py  test_wiring.py
backend/tests/ingest_contract/: __init__.py  loader.py  test_archive_contract.py  test_resolve_contract.py
backend/tests/ingest_contract/fixtures/mention_prefix/: body.json  expected.json
backend/tests/ingest_contract/fixtures/multi_coord/: body.json  expected.json
backend/tests/ingest_contract/fixtures/no_coord/: body.json  expected.json
backend/tests/ingest_contract/fixtures/quote_coord_in_op/: body.json  expected.json
backend/tests/ingest_contract/fixtures/quoted_video/: body.json  (+1 more)
backend/tests/typology/: __init__.py  fixtures.json  gen_fixtures.py  sanitizer.py  taxonomy.py  test_recall.py  weights.json  weights.py
(+341 files in other folders)
