[project]
name = "vidit-backend"
version = "0.1.0"
description = "Vidit — OSINT/GEOINT geolocation platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "PyJWT[crypto]>=2.9",
    "bcrypt>=4.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.7",
    "pydantic[email]>=2.0",
    "shapely>=2.0",
    "slowapi>=0.1.9",
    "orjson>=3.11.7",
    "httpx>=0.28.1",
    "boto3>=1.35",
    "sentry-sdk[fastapi]>=2.59.0",
    # Pillow is used exclusively by ``services/evidence_processing.py``
    # to strip EXIF + other metadata (GPS, camera, IPTC) from uploaded
    # images before they hit S3. Pinned ≥11 for the modern security
    # window — older versions had libtiff + libwebp CVEs.
    "pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "moto[s3]>=5.0",
    "mypy>=1.20",
    "types-shapely>=2.0",
]

[dependency-groups]
dev = []

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length (handled by formatter)
    "B008", # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"] # late imports after sys.path manipulation
"tests/*" = ["S101"]        # asserts are expected in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true
