[project]
name = "vidit-backend"
version = "0.1.0"
description = "Vidit — OSINT/GEOINT geolocation platform API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "alembic>=1.14",
    "psycopg2-binary>=2.9",
    "PyJWT[crypto]>=2.9",
    "bcrypt>=4.0",
    "python-multipart>=0.0.18",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.0",
    "shapely>=2.0",
    "slowapi>=0.1.9",
    "orjson>=3.11.7",
    "httpx>=0.28.1",
    "boto3>=1.35",
    "sentry-sdk[fastapi]>=2.59.0",
    # Pillow is used exclusively by ``services/evidence_processing.py``
    # to strip EXIF + other metadata (GPS, camera, IPTC) from uploaded
    # images before they hit S3. Pinned ≥11 for the modern security
    # window — older versions had libtiff + libwebp CVEs.
    "pillow>=12.3.0",
    "beautifulsoup4>=4.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "moto[s3]>=5.0",
    "mypy>=1.20",
    "types-shapely>=2.0",
    "vulture>=2.14",
]

[dependency-groups]
dev = []

[tool.ruff]
target-version = "py312"
line-length = 100
# vulture_whitelist.py is bare names (vulture's own format), not real Python, so
# it trips F821 / B018 under ruff. It is only ever read by vulture.
extend-exclude = ["alembic/versions", "vulture_whitelist.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length (handled by formatter)
    "B008", # function call in default argument (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"alembic/env.py" = ["E402"] # late imports after sys.path manipulation
"tests/*" = ["S101"]        # asserts are expected in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

# Dead-code gate (the backend analogue of the frontend's knip). Catches unused
# functions / classes / methods / attributes that ruff's F401 (imports only)
# does not. Migration files are generated by alembic and full of framework-only
# names, so they are excluded. vulture_whitelist.py lists the framework-magic
# false positives (route handlers reached via decorators, Pydantic / SQLAlchemy
# attributes accessed by name, pydantic-settings fields read via attribute
# access) so the real signal stays legible. Bare `uv run vulture` scans app +
# scripts + the whitelist.
[tool.vulture]
paths = ["app", "scripts", "vulture_whitelist.py"]
exclude = ["alembic/versions/"]
# 60, not the default 80: an unused module-level function / method scores 60, so
# an 80 floor would let a genuinely orphaned function through and the gate would
# only ever catch unused locals. At 60 vulture also flags every framework name it
# can't trace; the two blanket classes are handled here, the rest in
# vulture_whitelist.py, so the residual signal is real dead code.
min_confidence = 60
# Endpoint functions are reached only through their route decorator, and the
# ASGI middleware ones through app.middleware / .exception_handler; matching the
# decorator keeps a new route from ever needing a hand-added whitelist line.
ignore_decorators = [
    "@router.*",
    "@app.*",
    "@field_validator",
    "@model_validator",
]
# Names every Pydantic model carries by contract: model_config (the ConfigDict
# slot) and the cls receiver of a @field_validator classmethod. Neither is ever
# meaningful dead code, so ignore them by name rather than per-occurrence.
ignore_names = [
    "model_config",
    "cls",
]
